<resources>
    <string name="app_name">VS_pascalo_AntiTheft</string>
    <string name="btn_alarm_off">Alarm Off. Press to activate!</string>
    <string name="btn_alarm_on">Alarm On. Press to deactivate!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_seekBar">Volume:</string>
    <string name="title_number_field">Delay:</string>
    <string name="sensitivity_title">Sensitivity</string>
    <string name="sensitivity_summary">Change the sensitivity of the Alarm.</string>
    <string name="settings">Settings</string>
    <string name="delay_title">Delay</string>
    <string name="delay_summary">Change the delay between Movement and Alarm.</string>






    <string-array name="sensitivity_string_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="sensitivity_value_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string-array name="delay_string_array">
        <item>5s</item>
        <item>10s</item>
        <item>30s</item>
    </string-array>

    <string-array name="delay_value_array">
        <item>5</item>
        <item>10</item>
        <item>30</item>
    </string-array>


</resources>
