<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="@string/settings"
        android:key="pref_settings">

        <ListPreference
            android:key="sensitivity"
            android:title="@string/sensitivity_title"
            android:dialogTitle="@string/sensitivity_summary"
            android:entries="@array/sensitivity_string_array"
            android:entryValues="@array/sensitivity_value_array"
            android:defaultValue="1" />

        <ListPreference
            android:key="delay"
            android:title="@string/delay_title"
            android:dialogTitle="@string/delay_summary"
            android:entries="@array/delay_string_array"
            android:entryValues="@array/delay_value_array"
            android:defaultValue="10" />


    </PreferenceCategory>


</PreferenceScreen>